index.css에 전역으로 설정된 전역 설정 body 한정으로 변경

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+body {
   font-family: 'Pretendard Variable';
   font-weight: 600;
   line-height: 100%;
